# Proxigo_Macula

./: .gitignore  .gitmodules  README.md  mapbox-globe-dashboard.code-workspace
docker/: devcontainer.json  orin.Dockerfile
ros2/src/uav_bringup/uav_bringup/launch/: offboard_sitl.launch.py  uav_sitl.launch.py
ros2/src/uav_guidance/: setup.py
ros2_ws/src/uav_bringup/: CMakeLists.txt  launch  package.xml  setup.py
ros2_ws/src/uav_bringup/uav_bringup/launch/: uav_hw_telem2.launch.py
ros2_ws/src/uav_guidance/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/uav_guidance/scripts/: offboard_controller.py
ros2_ws/src/uav_guidance/uav_guidance/: Proxigo_Macula.code-workspace  offboard_controller.py  offboard_hello.py
scripts/: build_ros2.sh  run_px4_sitl.sh  run_ros_graph.sh  setup_orin.sh
