<?xml version="1.0"?>
<package format="3">
  <name>uav_guidance</name>
  <version>0.0.1</version>
  <description>Minimal PX4 offboard hello-world over px4_msgs</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
 
  <exec_depend>rclpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
